test/error/lex/unopenedComment.tig
let
	a:= 2 open comments */
in
	a
end
